@startuml facadeMONE
!theme plain
skinparam linetype ortho

class RouteViewModel <<client>> {
    + planRoute(options)
    + saveRoute(options)
    + previewRoute(options)
}

class RouteFacade {
    - service: RouteService
    - preferencesService: UserPreferencesService
    - costGateway: CostEstimatorGateway
    - priceSnapshotCache: PriceSnapshot
    + requestRoute(options, vehicle?): RouteResponse
    + previewRoute(options, vehicle?): SerializedRoute
    + requestAndSaveRoute(options, vehicle?): RouteResponse
    + listSavedRoutes(userId?): RouteSavedDTO[]
}

class RouteService {
    + requestRoute(options): Promise<IRouteData>
    + saveRoute(options): Promise<string>
}

class UserPreferencesService {
    + get(userId): Promise<UserPreferences>
}

interface CostEstimatorGateway {
    + getLatestPrices(): Promise<PriceSnapshot>
}

class EnergyPriceGateway

RouteViewModel --> RouteFacade : capa ViewModel usa fachada
RouteFacade --> RouteService : delega cálculos/persistencia
RouteFacade --> UserPreferencesService : carga preferencias
RouteFacade --> CostEstimatorGateway : solicita precios energía
CostEstimatorGateway <|.. EnergyPriceGateway : implementación usada por defecto


@enduml
